# hermes-orchestrator

./: README.md  SBOM.json  pyproject.toml
skills/agy-orchestrator-session-control/: SKILL.md
skills/agy-orchestrator-session-control/references/: technical-mining-pre-blueprint.md
skills/agy-orchestrator-session-control/templates/: agent-handoff-prompt.md
skills/hermes-agent/: SKILL.md
skills/hermes-agent/references/: webhooks.md
skills/hermes-architect-orchestrator-role/: SKILL.md
skills/hermes-architect-orchestrator-role/references/: will-authorization-and-orchestrator-autonomy.md
skills/orchestrator/: SKILL.md
src/hermes_orchestrator/: __init__.py  config.py  plugin.py
tests/: test_smoke.py
